# linguamesh-l10n

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GLOBAL_GOAL.md  IMPLEMENTATION_STATUS.md  Makefile  PLANS.md  PRIVACY.md  README.md  REPOSITORY_ROLE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: localization.yml
catalog/: messages.json
docs/: architecture.md  message-format.md  releasing.md  testing.md
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt-BR.json  ru.json  zh-Hans.json  zh-Hant.json
schema/: catalog.schema.v1.json  locale-pack.schema.v1.json
src/linguamesh_l10n/: __init__.py  cli.py  generators.py  package.py  pseudo.py  validation.py
tests/: test_generators.py  test_package.py  test_pseudo.py  test_validation.py
tests/fixtures/: invalid-placeholder.json  invalid-plural.json  invalid-select.json  unknown-key.json
tools/: check-foundation.sh  l10n
