[project]
name = "linguamesh-l10n"
version = "0.1.0"
description = "Canonical localization catalogs and native resource generators for LinguaMesh"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[tool.linguamesh]
schema-version = 1
source-locale = "en"
catalog-path = "catalog/messages.json"
locales-path = "locales"
generated-path = "generated"
